# src/main/java/be/houbrechts/it/awsserverless/Rating.java
@@ -1,0 +1,26 @@
+package be.houbrechts.it.awsserverless;
+
+import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBHashKey;
+import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBIndexRangeKey;
+import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTable;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+/**
+ * @author IHoubr
+ */
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@DynamoDBTable(tableName = "ratings")
+public class Rating {
+
+    @DynamoDBHashKey
+    private String movieId;
+
+    @DynamoDBIndexRangeKey
+    private String email;
+
+    private int rating;
+}
